<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Sheng-Kai</string>
    <string name="last_name">Wen</string>
    <string name="full_name">Sheng-Kai Wen</string>

    <string name="profile_bio_text">I\'m Sheng-Kai Wen. \nA CS student at UMass Amherst.\nI love to play hockey, baseball,\nand watching anime.</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Hockey 🏒</string>
    <string name="profile_hobby_second_text">🥈 Baseball ⚾</string>
    <string name="profile_hobby_third_text">🥉 Watching Anime 📺</string>
</resources>